--- a/xml/inequalityinput.ui
+++ b/xml/inequalityinput.ui
@@ -284,7 +284,12 @@
          </property>
          <item>
           <property name="text">
-           <string>cross</string>
+           <string>cross (x)</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>cross (+)</string>
           </property>
          </item>
          <item>
@@ -294,12 +299,22 @@
          </item>
          <item>
           <property name="text">
-           <string>triangle</string>
+           <string>triangle (up)</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>triangle (down)</string>
           </property>
          </item>
          <item>
           <property name="text">
            <string>square</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>diamond</string>
           </property>
          </item>
         </widget>
