--- a/xml/inequalityinput.ui
+++ b/xml/inequalityinput.ui
@@ -317,6 +317,11 @@
            <string>diamond</string>
           </property>
          </item>
+         <item>
+          <property name="text">
+           <string>dot</string>
+          </property>
+         </item>
         </widget>
        </item>
        <item>
