fixed issues with error-display, highlighting and checking.

--- a/xml/bareminimumplotter.ui
+++ b/xml/bareminimumplotter.ui
@@ -120,6 +120,10 @@ QLineEdit {
 	border-radius: 0px;
 }
 
+QLineEdit:focus {
+	border: 1px solid rgb(63, 98, 255); /*blue*/
+}
+
 QLineEdit#lineEdit_PlotTitle{
 	color: white;
 	font: bold 18px calibri;
@@ -127,9 +131,15 @@ QLineEdit#lineEdit_PlotTitle{
 }
 
 QLineEdit#lineEdit_PlotTitle:focus{
-	color: black;
-	font: bold 18px calibri;
+	color: back;
 	background: white;
+}
+
+
+/*Text Edit*/
+QTextEdit{
+	color: black;
+	background: rgb(241, 241, 241)
 }
 
 /*Splitters*/
@@ -147,6 +157,10 @@ QComboBox {
 	border-radius:0;
 	color: white;
 	font: 13px calibri;
+}
+
+QComboBox:focus {
+	border: 1px outset white;
 }
 
 QComboBox::drop-down {
@@ -266,7 +280,23 @@ QScrollBar:disabled{
      width: 3px;
      height: 3px;
      background: transparent;
- }</string>
+ }
+
+/*Checkbox*/
+QCheckBox {
+	background: transparent;
+	border-radius: 0px;
+}
+
+QCheckBox::indicator:unchecked {
+	image: url(../bare_minimum_plotter/rsc/unchecked-white.png);
+	padding-right: 12px;
+}
+
+QCheckBox::indicator:checked {
+	image: url(../bare_minimum_plotter/rsc/checked-white.png);
+	padding-right: 12px;
+}</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -410,6 +440,9 @@ QScrollBar:disabled{
             </property>
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_InequalityButtons">
+              <property name="topMargin">
+               <number>9</number>
+              </property>
               <item>
                <widget class="QToolButton" name="toolButton_AddInequality">
                 <property name="sizePolicy">
@@ -830,6 +863,9 @@ QScrollBar:disabled{
              <layout class="QVBoxLayout" name="verticalLayout_VariableButtons">
               <property name="sizeConstraint">
                <enum>QLayout::SetDefaultConstraint</enum>
+              </property>
+              <property name="topMargin">
+               <number>9</number>
               </property>
               <property name="rightMargin">
                <number>0</number>
@@ -1352,7 +1388,7 @@ QScrollBar:disabled{
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Ubuntu'; font-size:11pt;&quot;&gt;Error display&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Ubuntu'; font-size:10pt;&quot;&gt;Log&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
            <property name="textInteractionFlags">
             <set>Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
