--- a/xml/variableinput.ui
+++ b/xml/variableinput.ui
@@ -27,7 +27,7 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="sizeConstraint">
-    <enum>QLayout::SetNoConstraint</enum>
+    <enum>QLayout::SetDefaultConstraint</enum>
    </property>
    <property name="leftMargin">
     <number>0</number>
@@ -43,6 +43,12 @@
    </property>
    <item>
     <widget class="QSplitter" name="splitter">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
@@ -60,6 +66,12 @@
        </sizepolicy>
       </property>
       <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="baseSize">
        <size>
         <width>50</width>
         <height>0</height>
@@ -83,6 +95,12 @@
        </sizepolicy>
       </property>
       <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="baseSize">
        <size>
         <width>50</width>
         <height>0</height>
@@ -114,6 +132,12 @@
         <height>0</height>
        </size>
       </property>
+      <property name="baseSize">
+       <size>
+        <width>50</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="cursor">
        <cursorShape>IBeamCursor</cursorShape>
       </property>
@@ -140,6 +164,12 @@
         <height>0</height>
        </size>
       </property>
+      <property name="baseSize">
+       <size>
+        <width>50</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="cursor">
        <cursorShape>IBeamCursor</cursorShape>
       </property>
@@ -161,6 +191,12 @@
        </sizepolicy>
       </property>
       <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="baseSize">
        <size>
         <width>50</width>
         <height>0</height>
@@ -197,7 +233,7 @@
       </property>
       <property name="baseSize">
        <size>
-        <width>30</width>
+        <width>70</width>
         <height>0</height>
        </size>
       </property>
@@ -256,6 +292,12 @@
       </property>
      </widget>
      <widget class="QLabel" name="label_Constant">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="minimumSize">
        <size>
         <width>50</width>
@@ -268,6 +310,12 @@
         <height>16777215</height>
        </size>
       </property>
+      <property name="baseSize">
+       <size>
+        <width>80</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="text">
        <string>-</string>
       </property>
@@ -277,7 +325,7 @@
      </widget>
      <widget class="QPushButton" name="pushButton_Delete">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>2</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
