still messing with splitter behaviour. maybe too many resizing conditions: becoming jittery.

--- a/xml/inequalityinput.ui
+++ b/xml/inequalityinput.ui
@@ -226,7 +226,7 @@
      </widget>
      <widget class="QWidget" name="container_Plot" native="true">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
