--- a/xml/inequalityloader.ui
+++ b/xml/inequalityloader.ui
@@ -357,7 +357,7 @@
           <string>⋀</string>
          </property>
          <property name="flat">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
         </widget>
        </item>
@@ -388,7 +388,7 @@
           <string>⋁</string>
          </property>
          <property name="flat">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
         </widget>
        </item>
@@ -495,7 +495,7 @@
        <bool>false</bool>
       </property>
       <property name="flat">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
      </widget>
     </widget>
